[workspace]
resolver = "2"


members = [
    "examples/example_github_graphql",

    "tests/test_crashtest",
    "tests/test_db",
    "tests/test_fileopen",
    "tests/test_get_everything",
    "tests/test_logback",
    "tests/test_mnr",
    "tests/test_persistent_response",
    "tests/test_random",
    "tests/test_regex",
    "tests/test_sshcerts_usage",
    "tests/test_testmode",
    "tests/test_time",
    "tests/test_shared_db_rule_1",
    "tests/test_shared_db_rule_2",
    "tests/test_slack",
    "load_tests/load_test",
    "tests/test_cron",
    "tests/test_aes_enc_dec"
]

[profile.release]
lto = true
strip = "debuginfo"
