[package]
name = "plaid_stl"
version = "0.13.2"
edition = "2021"
#

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
paste = "1"
regex = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
