[package]
name = "plaid"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
quorum = ["quorum-agent"]

[dependencies]
clap = { version = "4", default-features = false, features = ["std"] }
async-trait = "0.1.56"
base64 = "0.13"
crossbeam-channel = "0.5"
env_logger = "0.8"
http = "1"
log = "0.4"
lru = "0.12"
octocrab = "0.37"
paste = "1.0"
plaid_stl = { path = "../plaid-stl" }
rcgen = { version = "0.10", features = ["x509-parser"] }
regex = "1"
ring = "0.17"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sled = "0.34.7"
time = "0.3"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
warp = { version = "0.3", features = ["tls"] }
wasmer = { version = "4", default-features = false, features = ["cranelift"] }
wasmer-middlewares = "4"
jsonwebtoken = { version = "9.2" }

# Uncomment to build with Quorum. This is needed
# because otherwise cargo will try and find this
# to build the lockfile.
quorum-agent = { path = "../../quorum/quorum-agent", default_features = false, optional = true }

[[example]]
name = "github-tailer"
path = "examples/tailers/github.rs"
