[package]
name = "plaid"
version = "0.35.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["aws", "gcp", "sled", "cranelift"]
aws = [
    "dep:aws-sdk-kms",
    "dep:aws-sdk-dynamodb",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-sqs",
]
cranelift = ["wasmer/cranelift"]
llvm = ["wasmer/llvm"]
gcp = []

[dependencies]
aes = "0.7"
alkali = "0.3.0"
async-trait = "0.1.56"
aws-config = "1.5.5"
aws-sdk-dynamodb = { version = "1.91.0", optional = true }
aws-sdk-kms = { version = "1.85.0", optional = true }
aws-sdk-s3 = { version = "1.103.0", optional = true, default-features = false }
aws-sdk-secretsmanager = "1.86.0"
aws-sdk-sqs = { version = "1.41.0", optional = true }
base64 = "0.13"
block-modes = "0.8"
chrono = "0.4.41"
clap = { version = "4", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
] }
cron = "0.15.0"
crossbeam-channel = "0.5"
env_logger = "0.8"
flate2 = "1.0"
futures-util = "0.3.30"
hex = "0.4.3"
http = "1"
jsonwebtoken = { version = "9.2" }
jwt-simple = { version = "0.12.10", default-features = false, features = [
    "pure-rust",
] }
log = "0.4"
lru = "0.16"
octocrab = "0.37"
paste = "1.0"
plaid_stl = { path = "../plaid-stl" }
rand = "0.8"
rcgen = { version = "0.10", features = ["x509-parser"] }
redis = { version = "0.32", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
], optional = true }
regex = "1"
ring = "0.17"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "cookies",
    "multipart",
    "stream"
] }
reqwest_cookie_store = "0.8.0"
rustls = { version = "0.23.17", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
sled = { version = "0.34.7", optional = true }
sshcerts = { version = "0.13.2", default-features = false }
tar = "0.4.41"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-util = "0.7.12"
tokio-tungstenite = { version = "0.23.1", features = [
    "rustls-tls-native-roots",
] }
toml = "0.5"
totp-rs = "5.6.0"
uuid = { version = "1", features = ["v4"] }
url = "2.5.2"
urlencoding = "2.1.3"
warp = { version = "0.3", features = ["tls"] }
wasmer = { version = "6", default-features = false }
wasmer-middlewares = "6"
x509-parser = "0.18.0"
thiserror = "2.0.17"
pulldown-cmark = "0.13.0"


[[example]]
name = "github-tailer"
path = "examples/tailers/github.rs"

[[bin]]
name = "plaid"
path = "src/bin/plaid.rs"

[[bin]]
name = "config_check"
path = "src/bin/config_check.rs"

[[bin]]
name = "request_handler"
path = "src/bin/request_handler.rs"

[[bin]]
name = "secrets_manager"
path = "src/bin/secrets_manager/main.rs"

[[bin]]
name = "sled_ddb_migrator"
path = "src/bin/sled_ddb_migrator.rs"
required-features = ["sled", "aws"]

[[bin]]
name = "db_migrator"
path = "src/bin/db_migrator.rs"
required-features = ["sled", "aws"]

[[bin]]
name = "secrets_json_to_toml"
path = "src/bin/secrets_json_to_toml.rs"

[[bin]]
name = "ddb_logback_explorer"
path = "src/bin/ddb_logback_explorer.rs"
required-features = ["aws"]

[[bin]]
name = "blocksmith"
path = "src/bin/blocksmith.rs"
