[package]
name = "error_handling"
description = "Production error handling patterns with thiserror"
version = "0.1.0"
edition = "2021"

[dependencies]
plaid_stl = { path = "../../../runtime/plaid-stl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lib]
crate-type = ["cdylib"]
