[package]
name = "test_fileopen"
description = "Test rule that tries to open a file on the host. This is supposed to be impossible."
version = "0.1.0"
edition = "2021"

[dependencies]
plaid_stl = { path = "../../../runtime/plaid-stl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
