[package]
name = "test_get_everything"
description = "Test rule that verifies that get_secrets, get_headers, get_query_params and get_accessory_data work as expected."
version = "0.1.0"
edition = "2021"

[dependencies]
plaid_stl = { path = "../../../runtime/plaid-stl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
