[package]
name = "test_gh_id_conversion"
description = "Test rule that verifies the APIs to map GH IDs to user IDs, repo IDs, etc, and vice versa work correctly."
version = "0.1.0"
edition = "2021"

[dependencies]
plaid_stl = { path = "../../../runtime/plaid-stl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
