[package]
name = "test_gh_username_id"
description = "Test rule that verifies the APIs to map GH usernames to user IDs and vice versa work correctly."
version = "0.1.0"
edition = "2021"

[dependencies]
plaid_stl = { path = "../../../runtime/plaid-stl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
