[package]
name = "test_google_docs"
description = "Test rule that uses the google_docs api for rules"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
plaid_stl = { path = "../../../runtime/plaid-stl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
