[package]
name = "test_mnr_return_cert"
description = "Test rule that verifies the Make Named Request return_cert functionality works as expected."
version = "0.1.0"
edition = "2021"

[dependencies]
plaid_stl = { path = "../../../runtime/plaid-stl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
